build/log/idf_py_stderr_output_790733
Command: make -j 14 all
/home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/process.c: In function 'dsp_process':
/home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/process.c:53:9: error: 'input' undeclared (first use in this function); did you mean 'int'?
   53 |         input = (int16_t *)heap_caps_malloc(FFT_SIZE * 2 * sizeof(int16_t), MALLOC_CAP_8BIT);
      |         ^~~~~
      |         int
/home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/process.c:53:9: note: each undeclared identifier is reported only once for each function it appears in
/home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/process.c: At top level:
/home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/process.c:9:18: warning: 'fft_buffer' defined but not used [-Wunused-variable]
    9 |  static int16_t *fft_buffer;
      |                  ^~~~~~~~~~
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:180: esp-idf/main/CMakeFiles/__idf_main.dir/process.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:6314: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [Makefile:130: all] Error 2
